2018-01-20  Bruno Haible  <bruno@clisp.org>

	Fix compilation error in C++ mode (regression from 2017-12-04).
	* modules/regexp/regexi.c (REGEXP-EXEC): Add necessary casts.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	syscalls: Make this module work with DYNAMIC_MODULES.
	Fixes bug#725.
	* modules/syscalls/calls.c (bogomips): New function, moved here from
	bogomips.c. Use 'volatile' to defeat compiler optimizations.
	* modules/syscalls/bogomips.c: Remove file.
	* modules/syscalls/Makefile.in (bogomips.o): Remove rule.
	(GENERATED): Remove bogomips.o.
	* modules/syscalls/link.sh.in (NEW_FILES): Likewise.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	clisp-link: Fix "ld: SONAME must not be empty string" warning.
	* clisp-link (add): Set 'dll' before invoking @createsharedlib@.

2018-01-14  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Mac OS X/x86_64.
	* Makefile.devel (multibuild-macosx-x86_64): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For Mac OS X/x86_64, enable all optimizations
	except ASM.

2018-01-14  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Mac OS X/PowerPC.
	* Makefile.devel (multibuild-macosx-powerpc): Enable all build variants
	that work or should work.
	* makemake.in (XCFLAGS): For Mac OS X/PowerPC, enable all optimizations
	except ASM.

2018-01-14  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Mac OS X/i386.
	* Makefile.devel (multibuild-macosx-i386): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For Mac OS X/i386, enable all optimizations
	except ASM.

2018-01-14  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on OpenBSD/x86_64.
	* Makefile.devel (multibuild-openbsd-x86_64): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For OpenBSD/x86_64, enable all optimizations
	except ASM.

2018-01-14  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on OpenBSD/i386.