@@ -1,5 +1,12 @@
 2018-01-20  Bruno Haible  <bruno@clisp.org>
 
+	Fix crash with all non-GCC/clang compilers (regression from 2006-09-03).
+	* lispbibl.d (Cclosure_last_const): Don't use sizeof of a struct that
+	contains a variable-length array.
+	* unix/PLATFORMS: Remove section about Sun cc.
+
+2018-01-20  Bruno Haible  <bruno@clisp.org>
+
 	Fix compilation error in C++ mode (regression from 2017-12-04).
 	* modules/regexp/regexi.c (REGEXP-EXEC): Add necessary casts.
 
